2005-03-18  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/key-performer.cc (create_audio_elements): don't use
	scm_eval_string. Check for minor 3rd directly.
  
	* input/mutopia/J.S.Bach/baerenreiter-sarabande.ly
	(sarabandeCelloGlobal): key is D minor, not F major.

2005-03-17  Jan Nieuwenhuizen  <janneke@gnu.org>

	Fix truncated --png output (Peter Danenberg).
	
	* python/lilylib.py (make_ps_images):
	* scripts/ps2png.py (copyright): Grok --papersize option.

	* scm/backend-library.scm (postscript->png): Add parameter
	PAPERSIZE.  Update callers.

	* scm/output-gnome.scm (music-font?): Bugfix: use "Emmentaler".
	Fixes symbol placement.

	* lily/spanner.cc: 
	* lily/stencil.cc: Use "libc-extension.hh" (WAS:
	<libc-extension.hh>).

2005-03-16  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Nitpick run.

	* buildscripts/fixcc.py: Update.

	Builddir run fixes.

	* HACKING (datadir): Add VERSION.

	* GNUmakefile.in (linktree): Bugfix: outconfdirs are one dir
	higher up.

2005-03-15  Werner Lemberg  <wl@gnu.org>

	* mf/feta-klef.mf (draw_gclef): Move z10' slightly so that the
	diagonal stem doesn't become thinner.

2005-03-15  Jan Nieuwenhuizen  <janneke@gnu.org>

	* buildscripts/fixcc.py: Fixes (Werner).

2005-03-15  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* mf/GNUmakefile ($(outdir)/lilypond.map): capitalize
	Emmentaler/Aybabtu.

	* GNUmakefile.in: fix lilypond-words path.

	* po/tr.po: update to 2.3.21

	* lily/new-fingering-engraver.cc (position_scripts): take priority
	from head position.

	* input/regression/finger-chords-order.ly (texidoc): new file.

2005-03-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* make/ly-rules.make: 
	* stepmake/aclocal.m4: 
	* Documentation/user/GNUmakefile: Remove old makeinfo compatibility.

	* buildscripts/fixcc.py (rules): Leave space after operator.

2005-03-14  Werner Lemberg  <wl@gnu.org>

	* mf/feta-klef.mf (draw_gclef): Replace `simple_serif' for
	top of the glyph with smooth curve.

2005-03-14  Han-Wen Nienhuys  <hanwen@xs4all.nl>
