@@ -504,19 +504,18 @@ def make_ps_images (ps_name, resolution = 90, papersize = "a4"):
 		if y == 0:
 			y = 1
 
-		###cmd = r'''gs -g%dx%d -sDEVICE=png16m  -dTextAlphaBits=4 -dGraphicsAlphaBits=4  -q -sOutputFile=%s -r%d -dNOPAUSE %s %s -c showpage -c quit ''' % \
-		###      (x, y, output_file, resolution, trans_ps, ps_name)
 		cmd = r'''gs\
 		-g%(x)d%(y)d\
-		-sDEVICE=png16m\
-		-dTextAlphaBits=4\
 		-dGraphicsAlphaBits=4\
-		-q\
-		-sOutputFile=%(output_file)s\
+		-dNOPAUSE\
+		-dTextAlphaBits=4\
+		-sDEVICE=png16m\
+		-sOutputFile='%(output_file)s'\
 		-sPAPERSIZE=%(papersize)s\
-		-r%(resolution)d -dNOPAUSE\
+		-q\
+		-r%(resolution)d\
 		%(trans_ps)s\
-		%(ps_name)s\
+		'%(ps_name)s'\
 		-c showpage\
 		-c quit ''' % vars ()
 
@@ -529,18 +528,17 @@ def make_ps_images (ps_name, resolution = 90, papersize = "a4"):
 		if os.path.isfile (rmfile):
 			os.unlink (rmfile)
 		
-		###cmd = r'''gs -s -sDEVICE=png16m  -dTextAlphaBits=4 -dGraphicsAlphaBits=4 -q -sOutputFile=%s -dNOPAUSE -r%d %s -c quit''' % (output_file,
-		### resolution, ps_name)
 		cmd = r'''gs\
 		-s\
-		-sDEVICE=png16m\
-		-dTextAlphaBits=4\
 		-dGraphicsAlphaBits=4\
-		-q\
-		-sOutputFile=%(output_file)s\
+		-dNOPAUSE\
+		-dTextAlphaBits=4\
+		-sDEVICE=png16m\
+		-sOutputFile='%(output_file)s'\
 		-sPAPERSIZE=%(papersize)s\
-		-dNOPAUSE -r%(resolution)d\
-		%(ps_name)s\
+		-q\
+		-r%(resolution)d\
+		'%(ps_name)s'\
 		-c quit''' % vars ()
 
 	status = system (cmd)
