@@ -1,3 +1,12 @@
+2005-03-18  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* scm/framework-tex.scm (convert-to-dvi): Barf if NAME contains
+	whitespace.
+
+	* python/lilylib.py (make_ps_images):
+	* scm/backend-library.scm (postscript->pdf, postscript->png):
+	Quote file name.  Use format rather than string-append juggling.
+
 2005-03-18  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* lily/key-performer.cc (create_audio_elements): don't use
